* Maven no longer adds classpath to jar manifests when building PowerMock (issue 413).
* PowerMockRunner now supports both MethodRules and TestRules to comply with JUnit 4.11 (thanks to "Boris Code" for the patch) (issue 419).
* Slf4j MockPolicy in Mockito now works again (issue 431).
* Removed synchronized from all MockGateway methods in order to make it work with multi-threaded Mockito.

Change log 1.5 (2012-12-04)
---------------------------
* Added var-args to mockStatic in the PowerMockito API. You can now do: 
  mockStatic(A.class, B.class, C.class);
* Suppression is now working for overridden methods (issue  364, 51). Thanks to  hpbeem for the patch.
* PowerMock junit module now supports JUnit rules for version 4.9+ (issue 344). Thanks to Andreas Kutschera for the patch.
* Fixed is with PowerMock JUnit runner that failed to parse JUnit versions including characters such as 4.9b2. (issue 381).
* Mockito extension API now uses Mockito 1.9.5 (issue 398) 
* Updated TestNG dependency to version 6.8
* Added support for easily mocking all constructors of a class in the Mockito extension API. For example: whenNew(X.class).withAnyArguments().thenReturn(xMock); (issue 405).
* Upgraded to Javassist 3.17.1-GA, this means that PowerMock works in Java 7!

Change log 1.4.12 (2012-04-05)
------------------------------
* Really added missing class, PowerMockTestCase, to testng full release jar (issue 327). 
* PowerMock JUnit module now works with JUnit 4.10 (thanks to Diego Coronel for the patch) (issue 367)
* Changed name from org.powermock.api.mockito.mockpolicies.Slf4jMockPolicy to org.powermock.api.mockito.mockpolicies.Slf4jMockPolicy in the Mockito extension API.
* Upgraded Javassist to version 3.16.1.GA.
* DeferSupportingClassLoader now overrides ClassLoader.findResources() which enables classes loaded by MockClassLoader to be to find resources via ClassLoader.findResources(...). Thanks to wrussellmorris for the patch (issue 380).